--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="container">   
                         <div class="row">
                             <div class="col s12 m12 lg12">
-                                <img  class="responsive-img circle me center" src="images/temp.jpg" alt="Me">
+                                <img  class="responsive-img circle me center" src="images/me.jpeg" alt="Me">
                                 <strong>
                                     <h5 class="bold center-align">Francisco Lucas</h5>
                                     <h6 class="center-align em">Estudante de <br> ciência da computação</h6>
@@ -46,12 +46,12 @@
                         </div>
                     </div>
                 </li>
-                <li><a href="#sobre" class="white-text waves-effect waves-dark">Sobre</a></li>
-                <li><a href="#projetos" class="white-text waves-effect waves-dark">Projetos</a></li>
-                <li><a href="#exp" class="white-text waves-effect waves-dark">Experiência</a></li>
-                <li> <a href="#hab" class="white-text waves-effect waves-dark">Habilidades</a></li>
-                <li> <a href="#educacao" class="white-text waves-effect waves-dark">Educação</a></li>
-                <li><a href="#contato" class="white-text waves-effect waves-dark">Contato</a></li>
+                <li><a href="#sobre" class="white-text waves-effect waves-teal">Sobre</a></li>
+                <li><a href="#projetos" class="white-text waves-effect waves-teal">Projetos</a></li>
+                <li><a href="#exp" class="white-text waves-effect waves-teal">Experiência</a></li>
+                <li> <a href="#hab" class="white-text waves-effect waves-teal">Habilidades</a></li>
+                <li> <a href="#educacao" class="white-text waves-effect waves-teal">Educação</a></li>
+                <li><a href="#contato" class="white-text waves-effect waves-teal">Contato</a></li>
             </ul>
            
     </aside>
@@ -59,20 +59,12 @@
         <main>
             <section id="sobre" >
                 <h2 class="teal z-depth-1"> <i class="material-icons ico">perm_identity</i> Sobre</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, blanditiis sit aut,
-                    laborum corrupti itaque maiores pariatur, nisi mollitia nesciunt cumque recusandae aspernatur. Eaque, nobis. 
-                    Quo illum nam at vitae? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique, soluta. Quidem sunt
-                     tenetur corrupti harum animi necessitatibus repellendus dolores, delectus, voluptates expedita, eaque fuga modi obcaecati!
-                      Vero delectus necessitatibus natus.</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus doloremque tempore blanditiis non eveniet
-                        rem quidem earum nemo facere ducimus. Rem quia ab dicta veritatis. Veritatis iste quo quasi ipsam? Lorem ipsum, dolor sit amet consectet
-                        ur adipisicing elit. Odit dolorum hic laboriosam nobis est porro, veniam ullam laudantium quisquam! Assumenda quidem consectetur ratione 
-                        obcaecati nobis ipsum aperiam dolores laboriosam harum.</p>
-
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, deleniti? Neque odit, alias esse doloremque eveniet
-                    distinctio vitae quidem quisquam. Maiores, provident ex delectus rem voluptatum officia dignissimos deleniti fugit!Lorem Lorem ipsum
-                     dolor sit amet consectetur, adipisicing elit. Reiciendis illum doloribus porro aspernatur. Dolor tenetur, cum, 
-                    sint quam dolorum quisquam placeat eveniet repellat sequi dolores numquam blanditiis ab velit impedit.</p>
+                <p>Olá, meu nome é Francisco atualmente sou estudante de ciência da computação,
+                     no IFB(Instituto Federal de Brasília) no 5º semestre.
+                </p>
+                <br>
+                <br>
+                <p>Seja bem vindo ao meu Curriculo online.</p>
             </section>
 
             <section id="projetos">
