--- a/index.html
+++ b/index.html
@@ -250,6 +250,9 @@
                                         <div class="col s4 m2">
                                             <img src="images/habLogos/python.png"  class="responsive-img" alt="JS"> Python
                                         </div>
+                                           <div class="col s4 m2">
+                                            <img src="images/habLogos/php.png" class="responsive-img" alt="JS"> PHP7
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -322,7 +325,7 @@
                         <div class="col s12 m12">
                             <div class="card">
                                 <div class="card-content">
-                                    <span class="card-title">Back End</span>
+                                    <span class="card-title">Banco de dados</span>
                                     <hr>
                                     <div class="row">
                                         <div class="col s4 m2">
@@ -330,9 +333,6 @@
                                         </div>
                                         <div class="col s4 m2">
                                             <img src="images/habLogos/mongodb.png" class="responsive-img" alt="JS"> MongoDB
-                                        </div>
-                                        <div class="col s4 m2">
-                                            <img src="images/habLogos/php.png" class="responsive-img" alt="JS"> PHP7
                                         </div>
                                     </div>
                                 </div>
