--- a/index.html
+++ b/index.html
@@ -334,6 +334,9 @@
                                         <div class="col s4 m2">
                                             <img src="images/habLogos/mongodb.png" class="responsive-img" alt="JS"> MongoDB
                                         </div>
+                                         <div class="col s4 m2">
+                                            <img src="images/habLogos/postgresql.jpeg" class="responsive-img" alt="JS"> PostgreSQL
+                                        </div>
                                     </div>
                                 </div>
                             </div>
