--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
                                         Galeria feita usando CSS e HTML
                                     </p>
                                 </div>
-                                <div class="card-reveal">
+                                <!-- <div class="card-reveal">
                                     <span class="card-title grey-text text-darken-4">Card Title
                                         <i class="material-icons right">close</i>
                                     </span>
                                     <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <div class="col s12 m6 l4">
@@ -106,12 +106,12 @@
                                         Landing page feita no curso Web Devloper Bootcamp da Udemy
                                     </p>
                                 </div>
-                                <div class="card-reveal">
+                                <!-- <div class="card-reveal">
                                     <span class="card-title grey-text text-darken-4">Card Title
                                         <i class="material-icons right">close</i>
                                     </span>
                                     <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <div class="col s12 m6 l4">
@@ -127,12 +127,12 @@
                                         Blog feito usando HTML,CSS,Semantic UI, e NodeJS no curso Web Devloper Bootcamp
                                     </p>
                                 </div>
-                                <div class="card-reveal">
+                                <!-- <div class="card-reveal">
                                     <span class="card-title grey-text text-darken-4">Card Title
                                         <i class="material-icons right">close</i>
                                     </span>
                                     <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <div class="col s12 m6 l4">
@@ -148,12 +148,12 @@
                                         Toy App - ToDo List com HTML,CSS,Bootcamp e javascript feita no Web Devloper Bootcamp
                                     </p>
                                 </div>
-                                <div class="card-reveal">
+                                <!-- <div class="card-reveal">
                                     <span class="card-title grey-text text-darken-4">Card Title
                                         <i class="material-icons right">close</i>
                                     </span>
                                     <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <div class="col s12 m6 l4">
@@ -169,12 +169,12 @@
                                         Jogo feito usando HTML,CSS e Javascript no web devloper bootcamp
                                     </p>
                                 </div>
-                                <div class="card-reveal">
+                                <!-- <div class="card-reveal">
                                     <span class="card-title grey-text text-darken-4">Card Title
                                         <i class="material-icons right">close</i>
                                     </span>
                                     <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <!-- <div class="col s12 m6 l4">
@@ -222,10 +222,10 @@
                                     </ul>
                                     <h5>Resumo das atividades</h5>
                                     <p><span class="teal-text strong">Periodo: </span>Abril 2018 - Atualmente</p>
-                                    <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
+                                    <!-- <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
                                         require little markup to use Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci ullam
                                         quod fuga molestiae ad perspiciatis, id eligendi obcaecati nisi error nostrum earum accusamus dolore
-                                        nemo libero delectus rerum laboriosam veniam. </p>
+                                        nemo libero delectus rerum laboriosam veniam. </p> -->
                                 </div>
                             </div>
                         </div>
@@ -400,7 +400,6 @@
                                             <a href="mailto:francisco.vieira@estudante.ifb.edu.br" id="email">francisco.vieira@estudante.ifb.edu.br</a>
                                             <a href="mailto:francisco.vieira@estudante.ifb.edu.br" id="emailMin">Email</a>
                                         </div>
-                                        
                                         <div>
                                             <a href="https://github.com/Lu-c-s">
                                                 <i class="fab fa-github-square teal-text icoM"></i>
