--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
             <section id="sobre" >
                 <h2 class="teal z-depth-1"> <i class="material-icons ico">perm_identity</i> Sobre</h2>
                 <p>Olá, meu nome é Francisco atualmente sou estudante de ciência da computação,
-                     no IFB(Instituto Federal de Brasília) no 5º semestre.
+                     no IFB(Instituto Federal de Brasília) no 7º semestre.
+                     Entre meus interesses estão: programação mobile e programação competitiva.
                 </p>
+                <p>Desenvolvedor: React, React Native e Android</p>
                 <br>
                 <br>
                 <p>Seja bem vindo ao meu Curriculo online.</p>
@@ -177,6 +179,11 @@
                                 </div> -->
                             </div>
                         </div>
+                        <div class="col s12 m6 l4">
+                            <a href="https://github.com/Lu-c-s">
+                                <p class="h2"> Ver mais</p>
+                            </a>
+                        </div>
                         <!-- <div class="col s12 m6 l4">
                             <div class="card medium">
                                 <div class="card-image waves-effect waves-block waves-light">
@@ -222,10 +229,40 @@
                                     </ul>
                                     <h5>Resumo das atividades</h5>
                                     <p><span class="teal-text strong">Periodo: </span>Abril 2018 - Atualmente</p>
+                                    <p>
+                                        Participei da empresa na parte de frontend  usando HTML,CSS,Javascript
+                                        e PHP no backend para desenvolver funcionalidades para o site da empresa.
+                                    </p>
                                     <!-- <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
                                         require little markup to use Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci ullam
                                         quod fuga molestiae ad perspiciatis, id eligendi obcaecati nisi error nostrum earum accusamus dolore
                                         nemo libero delectus rerum laboriosam veniam. </p> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col s12 m12">
+                            <div class="card">
+                                <div class="card-content expCard">
+                                <span class="card-title teal-text">Empresa -  YiMobile/Orbit Labs</span>
+                                    <hr>
+                                    <h5>Linguagens/Frameworks usadas:</h5>
+                                    <ul>
+                                        <li><i class="material-icons teal-text">keyboard_arrow_right</i>Javascript (React/React Native)</li>                                    
+                                        <!-- <li><i class="material-icons teal-text">keyboard_arrow_right</i>Angular2</li> -->
+                                    </ul>
+                                    <h5>Resumo das atividades</h5>
+                                    <p><span class="teal-text strong">Periodo: </span>Agosto 2018 - Atualmente</p>
+                                    <p>
+                                        Quando entrei na empresa participei em um projeto de e-commerce mobile que 
+                                        comecei a desenvolver em React Native, após esse projeto, comecei a trabalhar no
+                                         Aplicativo do partidoRede que também foi desenvolvido em React Native e 
+                                         atualmente  estou trabalhei no aplicativo mobile UnaFoode no painel do Web 
+                                         do mesmo que foi feito usando a tecnologia React.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -248,69 +285,21 @@
                                             Java
                                         </div>
                                         <div class="col s4 m2">
-                                            <img src="images/habLogos/python.png"  class="responsive-img" alt="JS"> Python
-                                        </div>
-                                           <div class="col s4 m2">
-                                            <img src="images/habLogos/php.png" class="responsive-img" alt="JS"> PHP7
-                                        </div>
+                                            <img src="images/habLogos/javascript.png"  class="responsive-img" alt="JS"> Javascript
+                                        </div>                                        
                                     </div>
                                 </div>
                             </div>
                         </div>
-
                         <div class="col s12 m12">
                             <div class="card">
                                 <div class="card-content">
-                                    <span class="card-title">HTML</span>
+                                    <span class="card-title">Javascript frameworks/tools/runtimes</span>
                                     <hr>
                                     <div class="row">
                                         <div class="col s4 m2">
-                                            <img src="images/habLogos/html5.png" class="responsive-img" alt="JS"> HTML 5
-                                        </div>
-                                     
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col s12 m12">
-                            <div class="card">
-                                <div class="card-content">
-                                    <span class="card-title">CSS</span>
-                                    <hr>
-                                    <div class="row">
-                                        <div class="col s4 m2">
-                                            <img src="images/habLogos/css3.png" class="responsive-img" alt="JS"> CSS3
-                                        </div>
-                                        <div class="col s4 m2">
-                                            <img src="images/habLogos/bootstrap.png" class="responsive-img" alt="JS"> Bootstrap3/4
-                                        </div>
-                                        <div class="col s4 m2">
-                                            <img src="images/habLogos/sass.png" class="responsive-img" alt="JS"> Sass
-                                        </div>
-                                        <div class="col s4 m2">
-                                            <img src="images/habLogos/materialize.png" class="responsive-img" alt="JS"> Materialize
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col s12 m12">
-                            <div class="card">
-                                <div class="card-content">
-                                    <span class="card-title">Javascript</span>
-                                    <hr>
-                                    <div class="row">
-                                        <div class="col s4 m2">
-                                            <img src="images/habLogos/javascript.png" class="responsive-img" alt="JS"> Javascript
-                                        </div>
-                                        <div class="col s4 m2">
-                                            <img src="images/habLogos/jquery.png" class="responsive-img" alt="JS"> Jquery
-                                        </div>
-                                        <!-- <div class="col s4 m2">
-                                            <img src="images/habLogos/angular.png" class="responsive-img" alt="JS"> Angular2
-                                        </div> -->
+                                            <img src="images/habLogos/react.png" class="responsive-img" alt="JS"> React
+                                        </div>                                    
                                         <div class="col s4 m2">
                                             <img src="images/habLogos/nodejs.png" class="responsive-img" alt="JS"> NodeJS
                                         </div>
@@ -321,22 +310,18 @@
                                 </div>
                             </div>
                         </div>
-
                         <div class="col s12 m12">
                             <div class="card">
                                 <div class="card-content">
-                                    <span class="card-title">Banco de dados</span>
+                                    <span class="card-title">Mobile</span>
                                     <hr>
-                                    <div class="row">
+                                    <div class="row">                                      
                                         <div class="col s4 m2">
-                                            <img src="images/habLogos/mysql.jpg" class="responsive-img" alt="JS"> MySQL
+                                            <img src="images/habLogos/react.png" class="responsive-img" alt="JS"> React Native
                                         </div>
                                         <div class="col s4 m2">
-                                            <img src="images/habLogos/mongodb.png" class="responsive-img" alt="JS"> MongoDB
-                                        </div>
-                                         <div class="col s4 m2">
-                                            <img src="images/habLogos/postgresql.jpeg" class="responsive-img" alt="JS"> PostgreSQL
-                                        </div>
+                                            <img src="images/habLogos/android.png" class="responsive-img" alt="JS"> Android
+                                        </div>                                    
                                     </div>
                                 </div>
                             </div>
@@ -367,7 +352,7 @@
             </section>
 
             <section id="educacao">
-                <h2 class="teal z-depth-1"><i class="material-icons ico">school</i> Educacao</h2>
+                <h2 class="teal z-depth-1"><i class="material-icons ico">school</i> Educação</h2>
                     <div class="container">
                         <div class="row">
                             <div class="col s12 m12">
@@ -377,7 +362,7 @@
                                         <p><span class="teal-text strong">Curso : </span>Ciência da computação </p>
                                         <p><span class="teal-text strong">Periodo : </span>01/ 2016 - 12/2019</p>
                                         <p><span class="teal-text strong">Local: </span>Taguatinga - Setor M  Norte</p>    
-                                        <p><span class="teal-text strong">Semestre Atual: </span>5º Semestre </p>
+                                        <p><span class="teal-text strong">Semestre Atual: </span>7º Semestre </p>
                                             
                                     </div>
                                 </div>
